# Asignaturas_4_1C

./: .gitignore  README.md
Electronica Potencia/: Calculadora_electronica_basica.xlsx  armonicos_2.sce  programa_arm4  test  test_arm3  test~
Instrumentacion Electronica/: Ej1_Instr.xlsx
Instrumentacion Electronica/PCB_Instrumentacion/: 2023-09-22T130558.xlsx  Job2.OutJob  PCB1.PcbDoc  PCB_Instrumentacion.BomDoc  PCB_Instrumentacion.PrjPcb  PcbLib.PcbLib  SchLib.SchLib  Sheet1.SchDoc
Instrumentacion Electronica/PCB_Instrumentacion/Project Outputs for PCB_Instrumentacion/: Design Rule Check - PCB1.drc  Design Rule Check - PCB1.html
Instrumentacion Electronica/PCB_Instrumentacion/__Previews/: Sheet1.SchDocPreview
Robotica Movil/moveturtle/: CMakeLists.txt  package.xml
Robotica Movil/moveturtle/src/: moveturtle_node.cpp
